<resources>
    <string name="app_name">Scrabble</string>
    <string name="play_with_computer">Игра с компьютером</string>
    <string name="play_with_friend">Игра с другом</string>
    <string name="continue_game">Продолжить игру</string>
    <string name="add_word">Добавить слово</string>
    <string name="show_stats">Показать статистику</string>
    <string name="help">Показать справку</string>
    <string name="rules_text">"Основные правила:\n
1. Первое слово должно проходить через центр поля, а каждое последующее должно использовать уже размещённые буквы.
\n2. В свой ход игрок может разместить слово на поле, заменить буквы с руки (если в мешке не меньше 7 букв) или пропустить ход.
\n3. Цветные поля имеют множитель очков:
\n - красное: ×3 слово
\n - розовое: ×2 слово
\n - синее: ×3 буква
\n - голубое: ×2 слово
\n4. Игра заканчивается, когда у одного игрока и в мешке заканчиваются буквы или когда оба игрока два раза подряд пропускают ход.
\n5. Побеждает игрок, у которого больше всего очков"</string>
    <string name="back_to_main">На главный экран</string>
</resources>