<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/addWord"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_word"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/showStats"
            app:layout_constraintEnd_toStartOf="@+id/helpButton"
            app:layout_constraintStart_toEndOf="@+id/showStats"
            app:layout_constraintTop_toTopOf="@+id/showStats"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/plus"
            app:tint="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/help"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/addWord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addWord"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/question"
            app:tint="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/showStats"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/show_stats"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/stats"
            app:tint="?attr/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_marginTop="128dp"
        android:contentDescription="Иконка приложения"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/icon"
        app:tint="?attr/colorPrimary" />

    <Button
        android:id="@+id/multiplayerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:padding="12dp"
        android:text="@string/play_with_friend"
        android:textColor="@color/my_primaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:text="@string/continue_game"
        android:textColor="@color/my_primaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>